# PAIOS

./: .gitignore  CHANGELOG.md  README.md  Readme.md  pyproject.toml
backend/paios/: __init__.py
docs/: AI_ARCHITECTURE.md  ANDROID_BUILD_GUIDE.md  Domain_Model.md  LOCAL_AI_SETUP.md  MOBILE_API.md  OLLAMA_VERIFICATION.md  RELEASE_GUIDE.md
docs/architecture/: CANONICAL_ORDER.md
docs/behavioral/: BEHAVIORAL_ARCHITECTURE.md  LIFECYCLES.md  RUNTIME.md  RUNTIME_EXECUTION.md  STATE_MACHINES.md  STATE_MACHINE_DESIGN.md  SYSTEM_EVENTS.md
docs/decisions/: ADR-001-Task-Removal.md  ADR-002-Scheduler.md  ADR-003-Ready-State-Exits.md
docs/domain/: BUSINESS_RULES.md  DOMAIN_MODEL.md  ENTITY_RELATIONSHIPS.md  GLOSSARY.md
docs/implementation/: AI_ASSISTANT_REPORT.md  API.md  APPLICATION_LAYER_REPORT.md  CLI_REPORT.md  DAEMON_REPORT.md  DASHBOARD_REPORT.md  DECISION_ENGINE_REPORT.md  DEPLOYMENT_REPORT.md  DESKTOP_DASHBOARD_REPORT.md  DOMAIN_LAYER_REPORT.md  DOMAIN_OPERATIONS_REPORT.md  LEARNING_ENGINE_REPORT.md  M20_PHASE1_ARCHITECTURE_AUDIT.md  MOBILE_COMPANION_REPORT.md  NOTIFICATION_REPORT.md  PERSISTENCE.md  PERSISTENCE_REPORT.md  PRODUCTION_READINESS_REPORT.md  PRODUCTIZATION_REPORT.md  PRODUCT_POLISH_REPORT.md  REPOSITORIES.md  REST_API_REPORT.md  RUNTIME_KERNEL_REPORT.md  SCHEDULER_REPORT.md  SERVICES.md
docs/runtime/: DECISION_ENGINE.md
frontend/desktop/: requirements.txt
frontend/mobile/: .gitignore  README.md  pubspec.yaml
installer/: PAIOSSetup.iss
installer/paios_installer/: __init__.py  __main__.py  registry.py  steps.py
launcher/paios_launcher/: app.py  single_instance.py  tray.py  update_check.py
relay/: .env.example  Dockerfile  README.md  docker-compose.yml  relay.py
relay/paios_relay/: __init__.py  __main__.py  auth.py  hub.py  server.py
scripts/: build_distribution.py  build_exe.cmd  build_installer.cmd  build_installer.py  install.ps1  make_icon.py  test_release.cmd  test_release.py  uninstall.ps1
tests/api/: conftest.py  test_endpoints.py  test_errors_and_server.py  test_intelligence_and_mobile.py  test_m20_endpoints.py  test_relay_integration.py  test_system_network.py
tests/application/: conftest.py  test_admission.py  test_determinism_and_guards.py  test_domain_operations.py  test_lifecycle_and_bootstrap.py  test_loop.py  test_m20_intents.py  test_use_cases.py
tests/assistant/: conftest.py  test_boundaries.py  test_m20_planning_tasks.py  test_orchestrator.py  test_parser_and_adapters.py  test_prompts_and_context.py
tests/cli/: conftest.py  test_commands_and_formatter.py  test_entity_commands.py  test_parser.py  test_shell_and_main.py
(+254 files in other folders)
