[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "paios"
version = "2.4.0"
description = "PAIOS - Personal AI Operating System"
requires-python = ">=3.12"
# The backend is deliberately dependency-free (stdlib only).
dependencies = []

[project.optional-dependencies]
# The desktop GUI tier (M13) is the only tier with a third-party need.
gui = ["PySide6-Essentials>=6.7"]

[project.scripts]
# The launchers (M16): installed onto PATH by pip, no PYTHONPATH needed.
# `paios shell` / `paios dashboard` / `paios serve` / `paios gui` are
# subcommands of the single `paios` executable.
paios = "paios.cli.main:main"
paios-gui = "paios_gui.app:main"
# The product launcher (M19): supervises daemon + API + GUI under one
# process with a system tray. PAIOS.exe is this entry frozen by
# PyInstaller (scripts/build_installer.py).
paios-launcher = "paios_launcher.app:main"

[tool.setuptools.packages.find]
where = ["backend", "frontend/desktop", "launcher", "updater"]
include = ["paios*", "paios_gui*", "paios_launcher*", "paios_updater*"]

[tool.setuptools.package-dir]
paios = "backend/paios"
paios_gui = "frontend/desktop/paios_gui"
paios_launcher = "launcher/paios_launcher"
paios_updater = "updater/paios_updater"

[tool.pytest.ini_options]
# installer/ ships in PAIOSSetup.exe, not in the wheel — pytest-only path.
pythonpath = [
    "backend", "frontend/desktop", "launcher", "installer", "updater",
    "relay", ".",
]
testpaths = ["tests"]
